Clip art now turned off by default

--- a/Conlang Notepad/My Project/Settings.settings
+++ b/Conlang Notepad/My Project/Settings.settings
@@ -27,10 +27,10 @@
       <Value Profile="(Default)" />
     </Setting>
     <Setting Name="ClipArt" Type="System.Boolean" Scope="User">
-      <Value Profile="(Default)">True</Value>
+      <Value Profile="(Default)">False</Value>
     </Setting>
     <Setting Name="Updates" Type="System.Boolean" Scope="User">
-      <Value Profile="(Default)">True</Value>
+      <Value Profile="(Default)">False</Value>
     </Setting>
     <Setting Name="ForceSansSerif" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
