--- a/Conlang Notepad/Conlang Notepad.vbproj
+++ b/Conlang Notepad/Conlang Notepad.vbproj
@@ -205,6 +205,12 @@
     <Compile Include="Dialogs\dlgWebcam.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="dlgCheckExisting.Designer.vb">
+      <DependentUpon>dlgCheckExisting.vb</DependentUpon>
+    </Compile>
+    <Compile Include="dlgCheckExisting.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="frmDictionary.Designer.vb">
       <DependentUpon>frmDictionary.vb</DependentUpon>
     </Compile>
@@ -302,6 +308,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Dialogs\dlgWebcam.resx">
       <DependentUpon>dlgWebcam.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="dlgCheckExisting.resx">
+      <DependentUpon>dlgCheckExisting.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmDictionary.resx">
       <DependentUpon>frmDictionary.vb</DependentUpon>
