--- a/Conlang Notepad/Conlang Notepad.vbproj
+++ b/Conlang Notepad/Conlang Notepad.vbproj
@@ -24,7 +24,7 @@
     <UpdatePeriodically>false</UpdatePeriodically>
     <UpdateRequired>false</UpdateRequired>
     <MapFileExtensions>false</MapFileExtensions>
-    <ApplicationRevision>0</ApplicationRevision>
+    <ApplicationRevision>1</ApplicationRevision>
     <ApplicationVersion>7.0.0.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <PublishWizardCompleted>true</PublishWizardCompleted>
@@ -340,6 +340,7 @@
     </None>
     <None Include="Release\Language Pad 5.2.zip" />
     <None Include="Release\Language Pad 5.3.zip" />
+    <None Include="Release\Language Pad 7.0.zip" />
     <None Include="Release\Language Pag 6.0.zip" />
     <None Include="Resources\Transparent2.png" />
   </ItemGroup>
