--- a/Language Pad/LanguagePad.vbproj
+++ b/Language Pad/LanguagePad.vbproj
@@ -116,7 +116,8 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Themes\DarkTheme.vb" />
+    <Compile Include="Themes\LunaTheme.vb" />
+    <Compile Include="Themes\NightTheme.vb" />
     <Compile Include="Themes\IceTheme.vb" />
     <Compile Include="ApplicationEvents.vb" />
     <Compile Include="CenteredComboBox.vb">
