Removed excessive whitespace around text art

--- a/Language Pad/My Project/Settings.settings
+++ b/Language Pad/My Project/Settings.settings
@@ -33,7 +33,7 @@
       <Value Profile="(Default)">False</Value>
     </Setting>
     <Setting Name="Theme" Type="System.String" Scope="User">
-      <Value Profile="(Default)">Ice</Value>
+      <Value Profile="(Default)">Snow</Value>
     </Setting>
   </Settings>
 </SettingsFile>
