--- a/Language Pad/LanguagePad.vbproj
+++ b/Language Pad/LanguagePad.vbproj
@@ -116,10 +116,10 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="frmHtml.Designer.vb">
-      <DependentUpon>frmHtml.vb</DependentUpon>
+    <Compile Include="Dialogs\dlgHtml.Designer.vb">
+      <DependentUpon>dlgHtml.vb</DependentUpon>
     </Compile>
-    <Compile Include="frmHtml.vb">
+    <Compile Include="Dialogs\dlgHtml.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Themes\DesertTheme.vb" />
@@ -289,8 +289,8 @@
     <EmbeddedResource Include="frmDictionary.resx">
       <DependentUpon>frmDictionary.vb</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="frmHtml.resx">
-      <DependentUpon>frmHtml.vb</DependentUpon>
+    <EmbeddedResource Include="Dialogs\dlgHtml.resx">
+      <DependentUpon>dlgHtml.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmMain.resx">
       <DependentUpon>frmMain.vb</DependentUpon>
