Start work on 8.2; Add color panel

--- a/Language Pad/My Project/Settings.settings
+++ b/Language Pad/My Project/Settings.settings
@@ -26,11 +26,8 @@
     <Setting Name="CustomSymbols" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
-    <Setting Name="ClipArt" Type="System.Boolean" Scope="User">
-      <Value Profile="(Default)">False</Value>
-    </Setting>
     <Setting Name="Updates" Type="System.Boolean" Scope="User">
-      <Value Profile="(Default)">False</Value>
+      <Value Profile="(Default)">True</Value>
     </Setting>
     <Setting Name="Theme" Type="System.String" Scope="User">
       <Value Profile="(Default)">Snow</Value>
