--- a/Language Pad/LanguagePad.vbproj
+++ b/Language Pad/LanguagePad.vbproj
@@ -331,6 +331,8 @@
     <None Include="Release\Language Pad 5.2.zip" />
     <None Include="Release\Language Pad 5.3.zip" />
     <None Include="Release\Language Pad 7.0.zip" />
+    <None Include="Release\Language Pad 8.0.zip" />
+    <None Include="Release\Language Pad 8.1.zip" />
     <None Include="Release\Language Pag 6.0.zip" />
     <None Include="Resources\Transparent2.png" />
   </ItemGroup>
