--- a/Language Pad/LanguagePad.vbproj
+++ b/Language Pad/LanguagePad.vbproj
@@ -25,7 +25,7 @@
     <UpdateRequired>false</UpdateRequired>
     <MapFileExtensions>false</MapFileExtensions>
     <ApplicationRevision>0</ApplicationRevision>
-    <ApplicationVersion>8.5.0.%2a</ApplicationVersion>
+    <ApplicationVersion>8.6.0.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <PublishWizardCompleted>true</PublishWizardCompleted>
     <BootstrapperEnabled>true</BootstrapperEnabled>
@@ -123,6 +123,7 @@
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Themes\DesertTheme.vb" />
+    <Compile Include="Themes\SpaceTheme.vb" />
     <Compile Include="Themes\OliveTheme.vb" />
     <Compile Include="Themes\LunaTheme.vb" />
     <Compile Include="Themes\NightTheme.vb" />
