Move theme code to c#

--- a/TundraLib/TundraLib.csproj
+++ b/TundraLib/TundraLib.csproj
@@ -57,6 +57,8 @@
     <Compile Include="StylizedColorButton.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="Themes\BreezeTheme.cs" />
+    <Compile Include="Themes\Theme.cs" />
     <Compile Include="ZiaFile.cs" />
   </ItemGroup>
   <ItemGroup>
