--- a/Language Pad/LanguagePad.vbproj
+++ b/Language Pad/LanguagePad.vbproj
@@ -134,12 +134,6 @@
     <Compile Include="Dialogs\dlgAddPage.vb">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Dialogs\dlgAppendReplace.Designer.vb">
-      <DependentUpon>dlgAppendReplace.vb</DependentUpon>
-    </Compile>
-    <Compile Include="Dialogs\dlgAppendReplace.vb">
-      <SubType>Form</SubType>
-    </Compile>
     <Compile Include="Dialogs\dlgCustomSymbols.Designer.vb">
       <DependentUpon>dlgCustomSymbols.vb</DependentUpon>
     </Compile>
@@ -169,6 +163,12 @@
     </Compile>
     <Compile Include="Dialogs\dlgUpdate.vb">
       <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Notebook\CharacterEditor.Designer.vb">
+      <DependentUpon>CharacterEditor.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Notebook\CharacterEditor.vb">
+      <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="Notebook\DictionaryFile.vb" />
     <Compile Include="frmDictionary.Designer.vb">
@@ -206,10 +206,10 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
-    <Compile Include="Notebook\NotebookEditor.Designer.vb">
-      <DependentUpon>NotebookEditor.vb</DependentUpon>
+    <Compile Include="Notebook\PropertiesEditor.Designer.vb">
+      <DependentUpon>PropertiesEditor.vb</DependentUpon>
     </Compile>
-    <Compile Include="Notebook\NotebookEditor.vb">
+    <Compile Include="Notebook\PropertiesEditor.vb">
       <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="Notebook\NotebookFile.vb" />
@@ -232,9 +232,6 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Dialogs\dlgAddPage.resx">
       <DependentUpon>dlgAddPage.vb</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Dialogs\dlgAppendReplace.resx">
-      <DependentUpon>dlgAppendReplace.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Dialogs\dlgCustomSymbols.resx">
       <DependentUpon>dlgCustomSymbols.vb</DependentUpon>
@@ -269,8 +266,11 @@
       <CustomToolNamespace>My.Resources</CustomToolNamespace>
       <SubType>Designer</SubType>
     </EmbeddedResource>
-    <EmbeddedResource Include="Notebook\NotebookEditor.resx">
-      <DependentUpon>NotebookEditor.vb</DependentUpon>
+    <EmbeddedResource Include="Notebook\CharacterEditor.resx">
+      <DependentUpon>CharacterEditor.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Notebook\PropertiesEditor.resx">
+      <DependentUpon>PropertiesEditor.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ssLoading.resx">
       <DependentUpon>ssLoading.vb</DependentUpon>
