--- a/TundraLib/TundraLib.csproj
+++ b/TundraLib/TundraLib.csproj
@@ -55,7 +55,11 @@
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="FixedSR.cs" />
-    <Compile Include="Notebook\NotebookFile.cs" />
+    <Compile Include="Notebook\Dictionary.cs" />
+    <Compile Include="Notebook\KeyValue.cs" />
+    <Compile Include="Notebook\Notebook.cs" />
+    <Compile Include="Notebook\Page.cs" />
+    <Compile Include="Notebook\TempFolder.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StylizedColorButton.cs">
       <SubType>Component</SubType>
