--- a/Language Pad/My Project/Settings.settings
+++ b/Language Pad/My Project/Settings.settings
@@ -14,5 +14,8 @@
     <Setting Name="SmartReplace" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
+    <Setting Name="HiDPI" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
