--- a/TundraLib/TundraLib.csproj
+++ b/TundraLib/TundraLib.csproj
@@ -62,6 +62,11 @@
     <Compile Include="Notebook\Page.cs" />
     <Compile Include="Notebook\TempFolder.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="StylizedColorButton.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -70,6 +75,10 @@
     <Compile Include="ZiaFile.cs" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
     <EmbeddedResource Include="StylizedColorButton.resx">
       <DependentUpon>StylizedColorButton.cs</DependentUpon>
     </EmbeddedResource>
