--- a/Language Pad/My Project/Settings.settings
+++ b/Language Pad/My Project/Settings.settings
@@ -20,5 +20,11 @@
     <Setting Name="ShowCharacterEditorOnStartup" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
+    <Setting Name="DictionaryFont" Type="System.Drawing.Font" Scope="User">
+      <Value Profile="(Default)">Calibri, 9pt</Value>
+    </Setting>
+    <Setting Name="DictionaryFontColor" Type="System.Drawing.Color" Scope="User">
+      <Value Profile="(Default)">Black</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
